<resources>
    <string name="app_name">Kitty</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Username Here</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Random Cats</string>
    <string name="menu_breeds">Breeds</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_favourites">Favourites</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="image_type_preference">Image Type Preference</string>
    <string name="select_preferred_image_type">Select preferred image type</string>
    <string name="choose_search_image_type">Choose search image type</string>
    <string name="default_username">ikiugu</string>
    <string name="username_preference">Username Preference</string>
    <string name="preferred_username">Preferred Username</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cats">Cats</string>
    <string name="shared_preferences_error">Error reading shared preferences</string>

</resources>