<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/image_type_preference">

        <ListPreference
            app:defaultValue="PNG"
            app:dialogTitle="@string/select_preferred_image_type"
            app:entries="@array/image_entries"
            app:entryValues="@array/image_values"
            app:key="userImageType"
            app:title="@string/choose_search_image_type"
            app:useSimpleSummaryProvider="true" />


    </PreferenceCategory>

    <PreferenceCategory app:title="@string/username_preference">

        <EditTextPreference
            app:defaultValue="ikiugu"
            app:dialogTitle="Username"
            app:key="username"
            app:title="@string/preferred_username"
            app:useSimpleSummaryProvider="true" />


    </PreferenceCategory>

</PreferenceScreen>