<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.ikiugu.kitty.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_breeds"
        android:name="com.ikiugu.kitty.ui.breeds.list.BreedsFragment"
        android:label="@string/menu_breeds"
        tools:layout="@layout/fragment_breeds" />
    <fragment
        android:id="@+id/nav_categories"
        android:name="com.ikiugu.kitty.ui.categories.search.CategoriesFragment"
        android:label="@string/menu_categories"
        tools:layout="@layout/fragment_categories" >
        <action
            android:id="@+id/action_nav_categories_to_nav_categories_result"
            app:destination="@id/nav_categories_result" />
    </fragment>
    <fragment
        android:id="@+id/nav_favourites"
        android:name="com.ikiugu.kitty.ui.favourites.FavouritesFragment"
        android:label="@string/menu_favourites"
        tools:layout="@layout/fragment_favourites" />
    <fragment
        android:id="@+id/nav_categories_result"
        android:name="com.ikiugu.kitty.ui.categories.display.DisplayCategoryImagesFragment"
        android:label="@string/cats"
        tools:layout="@layout/fragment_display_category_images" >
        <argument
            android:name="categoryResults"
            app:argType="com.ikiugu.kitty.models.CategoryResult[]" />
    </fragment>

</navigation>